samples/_failures_safe/1761316748_5adbcc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8a9f0886.c: In function ‘main’:
./samples/SAFE/__tmp_8a9f0886.c:177:13: error: expected declaration or statement at end of input
  177 |             default:
      |             ^~~~~~~
./samples/SAFE/__tmp_8a9f0886.c:177:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8a9f0886.c:177:13: error: expected declaration or statement at end of input
